fixed description width on tablet

--- a/main.css
+++ b/main.css
@@ -615,7 +615,7 @@ li a:hover {
     margin-top: 32px;
   }
   .main #slider-section .img-description-container {
-    width: 90%;
+    width: 95%;
   }
 }
 @media screen and (max-width: 1024px) {
